# Project-lumen

./: LUMEN_CONTEXT.md  LUMEN_HARDWARE_SPEC.md  LUMEN_NEXT.md  LUMEN_SCHEMA.sql  LUMEN_SCHEMA_002_mux.sql  PROJECT_LUMEN_HANDOVER.md  eslint.config.mjs  package-lock.json  package.json
lumen-player/: .gitignore  README.md  env.example  pyproject.toml
lumen-player/lumen_player/: __init__.py  __main__.py  config.py  log.py  player.py  realtime.py  server.py  supabase_client.py
lumen-player/scripts/: flash-prep.md  install.sh  laptop-projector-test.md
lumen-player/systemd/: lumen-player.service
scripts/: seed.mjs
src/: proxy.ts
src/app/: MarketingLanding.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx
src/app/api/artist/avatar/: route.ts
src/app/api/licenses/: route.ts
src/app/api/shows/: route.ts
src/app/artists/[slug]/: page.tsx
src/app/dashboard/: layout.tsx  loading.tsx  page.tsx
src/app/dashboard/admin/: loading.tsx  page.tsx
src/app/dashboard/artist/: ArtistStudio.tsx  WelcomePanel.tsx  loading.tsx  page.tsx
src/app/dashboard/venue/: PreviewVideo.tsx  ShowLibrary.tsx  SyncedVideo.tsx  loading.tsx  page.tsx  realtime.ts  toast.ts
src/app/onboarding/: page.tsx
src/app/shows/[show_id]/: page.tsx
src/app/sign-in/[[...sign-in]]/: page.tsx
src/app/sign-up/[[...sign-up]]/: page.tsx
src/components/: ArtistOfMonth.tsx  AuthLayout.tsx  DashboardLayoutClient.tsx  DashboardNav.tsx  ThemeProvider.tsx  Toaster.tsx  clerkAppearance.ts
src/utils/: mux.ts  muxValidation.ts  toast.ts
src/utils/supabase/: server.ts
(+45 files in other folders)
