[project]
name = "lumen-player"
version = "0.1.0"
description = "On-table software for Project Lumen — WebSocket-driven HLS playback via mpv"
requires-python = ">=3.11"
authors = [{ name = "Wolsten Studios LTD" }]
dependencies = [
  "websockets>=12.0",
  "httpx>=0.25.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["lumen_player*"]
